# code-aster-copy

./: .clang-format  .gitignore  .hgignore  .hgtags  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  CONTRIBUTORS.txt  README.md  README_pyproject.md  call_compile.bat  call_compile_ifx.bat  call_link.bat  check_ci.sh  check_docs.sh  conda_bibfor.py  conda_build.bat  conda_build.sh  conda_build_prereq.sh  conda_datetime.bat  conda_env.bat  conda_manual_build.bat  conda_rearrange.bat  configure  environment.yml  gcovr.cfg  ifx_env.bat  makefile  notes_nonl.md  pixi.toml  pyproject.toml  remaining.txt  run.bat  test_cont.txt  waf.engine  waf.main  waf_variant  wscript
.devhelper/: check_perf.py  check_requirements.sh  check_updates.sh
.github/: copilot-instructions.md
.github/workflows/: ci-build.yml  ci-condadev-build.yml
.gitlabci/: check_issues.sh  check_source.sh  compile.sh  compile_minimal.sh  coverage.sh  coverage_main.py  debug-ci.sh  debugging.list  doc_html.sh  gitlab-ci-pleiade.yml  known_failures-pleiade.list  perf.sh  prepare.sh  prepare_pixi.sh  setup_pixi.sh  test.sh
.gitlabci/coverage/: __init__.py  coverage.py  features.py  maj_cata.py  show_keywords.py
.junie/: guidelines.md
.run/: run_aster_main.run.xml  run_ctest_main.run.xml
astest/: BurgerAgeing.mfront  Chaboche.mfront  GdefMonoCrystal.mfront  GdefMono_Jacnum.mfront  MetaAcierEPIL_PT.mfront  MonoCrystal_DD_CFC_InteractionMatrix.mfront  Plasticity.mfront  Plasticity_brick.mfront  Signorini.mfront  SignoriniSimoMiehe.mfront  SimoMieheVmis.mfront  adls102a.comm  adlv100a.comm  adlv100b.comm  adlv100c.comm  adlv100d.comm  adlv100e.comm  adlv100f.comm  adlv100g.comm  adlv100h.comm  adlv100i.comm  adlv100j.comm  adlv100k.comm  adlv100l.comm  adlv100m.comm  adlv100n.comm  adlv100o.comm  adlv100p.comm  adlv100q.comm  adlv100r.comm  adlv101a.com1  adlv101a.comm  adlv101a.export  adlv101b.comm  adlv101c.comm  adlv101d.comm  adlv101e.comm  adlv101f.com1  adlv101f.comm  adlv301a.comm  (+6889 more)
astest/hsnv100z/: coupled_mechanics.py  coupled_thermics.py  env_ple.sh  makefile
astest/zzzz138a/: zzzz138a.csv
astest/zzzz138b/: zzzz138b.csv
astest/zzzz178d/: coupled_mechanics.py  coupled_thermics.py
bibc/: aster.def  aster_core.def  aster_fonctions.def  aster_module.def  aster_sym.def  bibc.def  bibc_rewrite.def  bibc_sym.def  med_aster.def  wscript
bibc/hdf/: hdfcld.c  hdfclf.c  hdfclg.c  hdfcrf.c  hdfcrg.c  hdfnbo.c  hdfnom.c  hdfopd.c  hdfopf.c  hdfopg.c  hdfrat.c  hdfrsv.c  hdftsd.c  hdftyp.c  hdfwat.c  hdfwsv.c
bibc/include/: aster.h  aster_core_module.h  aster_depend.h  aster_exceptions.h  aster_fonctions_module.h  aster_fort.h  aster_fort_blas.h  aster_init.h  (+24 more)
bibcxx/: bibcxx_sym.def  mfront.def  wscript
bibfor/: bibfor.def  bibfor_sym.def  wscript
catalo/: build_cata.py  wscript
code_aster/: CA.py  Commands.py  __init__.py  aster_pkginfo.py  aster_pkginfo.pytmpl  aster_version.pytmpl  wscript
conda/: .ci_openmpi_release_64.yaml  .gitignore  CONDA_README.md  add_bind_to_med_symbols.py  bibc.def  bibc_default_order.txt  bibfor.def  bld.bat  build.bat  build.sh  clang_compilation_database.py  conda_build_config.yaml  conda_win_compilation.md  config.py  config.yaml  create_def_file.py  create_lib_file.py  cshlib.txt  cxxshlib.txt  demangle_example.py  env.debug.yml  env.debug_312.yml  env.release.yml  environment.linux.yml  environment.win.yml  environment.yml  environment_nomkl.yml  fc_deps_scan.py  ifort.py  install_conda.bat  install_ifx.bat  manual_compile.py  manual_create_def_file.py  manual_lib.py  manual_link.py  msvc_utils.py  profile.bat  recipe.yaml  run_cmake.py  run_test.bat  (+8 more)
conda_debug/: .gitignore  ASTER_BEHAVIOUR_LIB_ISSUE_ANALYSIS.md  DEBUG_SESSION_2025-11-10.md  FORTRAN_RUNTIME_CHECKS_ISSUE.md  MUMPS_DEBUG_STRATEGY.md  NEXT_STEPS.md  TEST_FAILURE_SUMMARY_LINUX_251107.md
config/: bibfor.list  clang_compilation_database.py  cshlib.txt  fc_scan.py  flang.py  fortran_deps.py  ifort.py  manual_compile.py  manual_link.py  msvc.py
data/: CTestTestfile.cmake.tmpl  code_aster_dict.aspell.per  config-win.txt.tmpl  config.txt.tmpl  create_install_script  ddt_wrapper.tmpl  post_build_win.sh  post_install  profile.bat.tmpl  profile.sh.tmpl  run_aster.bat  run_aster_for_ctest  run_aster_for_ctest.bat  run_ctest.bat  run_sbatch.bat  update_pyd_links.bat  wscript
doc/: conf.py  copyright.rst  devguide.rst  generate_rst.py  installation.rst  pydoc_pyrenderer.py  requirements.txt  wscript
env.d/: cronos_impi.sh  cronos_mpi.sh  cronos_std.sh  eole_std.sh  gaia_mpi.sh  gaia_std.sh  salome_meca_std.sh  scibian10_mpi.sh  scibian10_std.sh  scibian9_mpi.sh  selena_mpi.sh  version.sh
i18n/: wscript
libs/: wscript
mfront/: BETON_AGEING.mfront  BETON_BURGER.mfront  Barcelone.mfront  CSSM.mfront  ELAS_HYPER_VISC.mfront  GonfElas.mfront  HYPER_HILL.mfront  Iwan.mfront  KH_CSSM.mfront  MCC.mfront  META_LEMA_ANI.mfront  MetaAcierEPIL_PT.mfront  MohrCoulombAS.mfront  NLH_CSRM.mfront  VISC_ISOT_PLAS.mfront  extract_propnames.py  wscript
msvc/: .gitignore  BIBFOR_EXT_ASTERGC_IMPLEMENTATION.md  DEF_AUTO_GENERATION.md  DEF_CACHE_README.md  FORTRAN_UNRESOLVED_REFERENCES.md  MSVC_README.md  asterGC.def  atomic_gnu_stubs.c  bibc.def  bibcxx.def  bibfor.def  bibfor_ext.def  def_gen_astergc.py  def_gen_bibfor_ext.py  def_gen_c.py  def_gen_cache.py  def_gen_cpp.py  def_gen_fc.py  mfront.def  msvc_lib.py  run_tests.py  wscript
run_aster/: __init__.py  __main__.py  command_files.py  config.py  ctest2junit.py  error_messages.py  export.py  logger.py  run.py  run_aster_main.py  run_ctest_main.py  run_sbatch_main.py  settings.py  status.py  timer.py  toolbox.py  utils.py  wscript
wafcfg/: centos8_mpi.py  centos8_std.py  cronos_mpi.py  cronos_std.py  scibian9_mpi.py  scibian9_std.py
waftools/: clang_compilation_database.py  clangdb.py  def_generator.py  ext_aster.py  mathematics.py  med.py  med_cfg.py  metis.py  msvc.py  msvc_lib.py  msvc_manifest_retry.py  mumps.py  official_platforms.py  parallel.py  parmetis.py  petsc.py  python_cfg.py  runtest.py  scotch.py  wafutils.py
(+20926 files in other folders)
