[project]
authors = [{ name = "code-aster", email = "code-aster@edf.fr" }]
name = "codeaster-src"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.project]
channels = ["conda-forge"]
conda-pypi-map = { conda-forge = ".mapping.json" }
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://nexus.retd.edf.fr/repository/pypi-all/simple"


[tool.pixi.pypi-dependencies]
codeaster-src = { path = ".", editable = true }

[tool.setuptools]
packages = ["code_aster"]

[tool.pixi.tasks]
configure = { cmd = [
    "BUILD=debug",
    "CC=mpicc",
    "CXX=mpicxx",
    "FC=mpif90",
    "./configure",
    "--enable-mpi",
    "--med-libs='medfwrap medC'",
    "--disable-metis",
] }

build = { cmd = ["BUILD=debug", "make"] }
install = { depends-on = ["build"] }

[tool.pixi.dependencies]
mpi = "==1.0"
compilers = "1.7.*"
openblas = ">=0.3.29,<0.4"
hdf5 = ">=1.14.4,<2"
libmed = { version = "4.1.*", build = "mpi_openmpi*" }
numpy = "1.24.*"
scipy = ">=1.15.2,<2"
pyyaml = ">=6.0.2,<7"
sphinx = "<7"
ipython = ">=9.0.2,<10"
ruff = ">=0.11.1,<0.12"
make = ">=4.4.1,<5"
mpi4py = "4.0.*"
openmpi = ">=5.0.7,<6"
zlib = ">=1.3.1,<2"
scalapack = ">=2.2.0,<3"
gmsh = ">=4.13.1,<5"

[tool.pixi.feature.dbg.dependencies]
debugpy = "*"
py-spy = ">=0.4.0,<0.5"

[tool.pixi.environments]
dbg = ["dbg"]

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
indent-width = 4
builtins = ["_", "_F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"code_aster/Cata/**/*.py" = ["F403", "F405"]
