[project]
name = "codeaster-src"
dynamic = ["version"]
requires-python = "~=3.11.13"
dependencies = [
    "numpy==1.24.*",
    "scipy>=1.15.2,<2",
    "ipython>=9.0.2,<10",
    "medcoupling>=9.12.0,<10",
]

[dependency-groups]
test = ["pytest"]
lint = ["ruff", "black>=25.1.0,<26"]
doc = ["sphinx<7"]
debug = ["debugpy", "py-spy>=0.4.0,<0.5"]
dev = [
    "pyyaml>=6.0.2,<7",
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "doc" },
    { include-group = "debug" },
]

[project.optional-dependencies]
sympy = ["sympy>=1.14.0,<2"]
gmsh = ["gmsh>=4.13.1,<5"]
all = ["codeaster-src[sympy]", "codeaster-src[gmsh]"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code_aster"]

[tool.setuptools_scm]
# Custom configuration options go here
version_scheme="no-guess-dev"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
indent-width = 4
builtins = ["_", "_F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"code_aster/Cata/**/*.py" = ["F403", "F405"]

[tool.pixi.workspace]
channels = ["conda-forge"]
conda-pypi-map = { conda-forge = ".mapping.json" }
platforms = ["linux-64"]

[tool.pixi.tasks]
configure = { cmd = ["./configure"], env = { ENABLE_CCACHE = "1" } }

build = { cmd = ["make"] }
install = { depends-on = ["build"] }
start = { cmd = "../install/mpi/bin/run_aster" }
test = { cmd = "../install/mpi/bin/run_ctest", depends-on = ["install"] }
test-push = { cmd = [
    "../install/mpi/bin/run_ctest",
    "-R",
    "\"(asrun0|mumps02b|supv002|vocab0|zzzz509j)\"",
    "--no-resutest",
], depends-on = [
    "install",
] }

[tool.pixi.dependencies]
mpi4py = "4.0.*"
petsc4py = ">=3.21.6,<4"
slepc4py = ">=3.21.2,<4"
# compilers
gcc = ">=12.0,<13"
gfortran = ">=12.0,<13"
gxx = ">=12.0,<13"
mpi = "==1.0"
openmpi = ">=5.0.7,<6"
# mathematical libraries
blas = { version = "*", build = "openblas" }
scalapack = ">=2.2.0,<3"
# libs
hdf5 = ">=1.14,<2"
libmed = { version = "4.1.*", build = "mpi_openmpi*" }
libptscotch = ">7"
metis = ">=5.1.0,<6"
mfront = "<5.0"
mgis = "<3.0"
mumps-mpi = ">5.4,<5.9"
parmetis = ">=4.0.3,<5"
petsc = ">3.17,<3.22"
slepc = "*"
zlib = ">=1.3.1,<2"
# developer tools
ccache = ">=4.11.2,<5"
clang-format = "17.*"
cmake = "<4"
make = ">=4.4.1,<5"

[tool.pixi.feature.rtd.dependencies]
mpi4py = "4.0.*"
numpy = "<2"
python = "3.12.*"
sphinx = "<7"
sphinx-rtd-theme = "*"

[tool.pixi.feature.rtd.tasks]
builddoc = { cmd = "python -m sphinx -T -b html -d ../build/mpidebug/doc/doctrees -D language=en . ", cwd = "doc" }

[tool.pixi.feature.mkl.dependencies]
mkl = "*"

[tool.pixi.environments]
default = { features = ["dev", "all"], solve-group = "default" }
mkl = { features = ["mkl"], solve-group = "default" }
rtd = { features = ["rtd"], no-default-feature = true }

[tool.pixi.pypi-options]
extra-index-urls = ["https://nexus.retd.edf.fr/repository/pypi-all/simple"]
